--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,6 +9,8 @@ package:
 source:
   url: https://pypi.org/packages/source/{{ name[0] }}/{{ name }}/kinisi-{{ version }}.tar.gz
   sha256: 75e9dfb01c18bd27e4b239aa4a843973e8b72800a45232962e76561e4e518306
+  patches:
+    - bs4.patch
 
 build:
   noarch: python
